--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,10 +1,16 @@
 <html>
     <head>
         <title>Voces Inocentes</title>
-        <link rel="stylesheet" href="CSS/estilos.css" />
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Este será el blog de la fundación</h1>
-        <p>Desarrollando todo el carretazo</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título del blog de la Fundación Voces Inocentes</h1>
+                <p>En este aparte se estará dando a conocer la Fundación Voces Inocentes para 
+                    que a las personas les quede más claro la finalidad de la misma</p>
+            </div>
+        </div>
+        
     </body>
 </html>
