Este es el final de los cambios en cabecera.

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Esta es la cabecera
+                <span id="tagline">El blog inicial</span>
+            </div>
             <div id="post">
                 <h1>Este es el título del blog de la Fundación Voces Inocentes</h1>
                 <p>En este aparte se estará dando a conocer la Fundación Voces Inocentes para 
