Agregado un parrafo al master más cambio de tipografia

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,7 +8,9 @@
             <div id="post">
                 <h1>Este es el título del blog de la Fundación Voces Inocentes</h1>
                 <p>En este aparte se estará dando a conocer la Fundación Voces Inocentes para 
-                    que a las personas les quede más claro la finalidad de la misma</p>
+                   que a las personas les quede más claro la finalidad de la misma</p>
+                <p>Este es un párrafo que hago en la rama master, veremos qué es lo 
+                   que pasa al momento de hacer un merge</p>
             </div>
         </div>
         
