--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Voces Inocentes</title>
+        <title>Fundación Voces Inocentes</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
