Se cambió la cabecera por otro titulo

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Esta es la cabecera
+                Esta es la fundación Voces Inocentes
                 <span id="tagline">El blog inicial</span>
             </div>
             <div id="post">
